# prices_rate_tesouro

./: README.md  last_day.json  main.py  pyproject.toml  requeriments.txt
api/: tesouro.py  utils.py
core/: data_process.py
